# OpenGLDemo

./: .gitignore  【OpenGL】Clion配置.txt
OpenGL/: CMakeLists.txt  main.cpp
OpenGL/include/tool/: model.h
OpenGL/shader/: fragment.glsl  light_object_frag.glsl  light_object_vert.glsl  vertex.glsl
